# survey-assist-embed-core

./: .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
demos/: embedding_handler.py
demos/sayt/: sayt_artifact_example.py  sayt_example.py
docs/: guide.md  index.md
src/survey_assist_embed_core/: __init__.py
src/survey_assist_embed_core/adapters/: __init__.py
src/survey_assist_embed_core/adapters/classifai/: __init__.py  artifacts.py  vector_backend.py  vectoriser.py
src/survey_assist_embed_core/adapters/storage/: __init__.py  gcs.py  local_gcs.py
src/survey_assist_embed_core/adapters/taxonomy/: __init__.py  sic.py
src/survey_assist_embed_core/embed/: __init__.py  embedding.py  sic_specific_embed.py
src/survey_assist_embed_core/models/: __init__.py  search.py  status.py
src/survey_assist_embed_core/ports/: __init__.py  artifact_store.py  storage.py  vector_backend.py
src/survey_assist_embed_core/sayt/: __init__.py  _base.py  builder.py  core.py  indexes.py  retriever_specs.py  retrievers.py  storage.py  suggester.py
tests/: test_classifai_artifact_store.py  test_classifai_vector_backend.py  test_embedding.py  test_gcs_storage.py  test_models.py  test_package_import.py  test_sic_specific_embed.py
tests/sayt/: conftest.py  test_sayt.py  test_sayt_builder.py  test_sayt_config.py  test_sayt_retrievers.py  test_sayt_storage.py
