[project]
name = "survey-assist-embed-core"
version = "0.1.0"
description = ""
authors = [{ name = "Steve Gibbard", email = "steve.gibbard@ons.gov.uk" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "autocorrect (>=2.6.1,<3.0.0)",
    "classifai[huggingface] @ git+https://github.com/datasciencecampus/classifai.git@v1.0.0",
    "google-cloud-storage (>=2.18,<3.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "pydantic (>=2.11.1,<3.0.0)",
    "sic-classification-library @ git+https://github.com/ONSdigital/sic-classification-library.git@v0.1.5",
    "xlrd (>=2.0.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.0,<10.0.0)",
    "bandit (>=1.9.4,<2.0.0)",
    "ruff (>=0.15.17,<0.16.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "pylint (>=4.0.6,<5.0.0)",
    "mkdocs-material (>=9.7.6,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "detect-secrets (>=1.5.0,<2.0.0)",
    "deptry (>=0.25.1,<0.26.0)",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    # Enabling ALL is not recommended it will implicitly enable new rules after upgrade.
    # "ALL",

    # Ruff rules: https://docs.astral.sh/ruff/rules/

    "E",   # pycodestyle erros
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "I",   # isort
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "S",   # flake8-bandit
    "D",   # pydocstyle - Enforce existing docstrings only
    "C90", # mccabe
    "RUF", # Ruff specific rules

    # PL - Pylint is only partially supported, we also use the pylint tool to catch all the rules.
    # It is enabled here to take advantage of the ruff's speed.
    "PL",
]

ignore = [
    # Conflicts with google docstring style
    "D205",
    # Allow missing docstring, remove to enforce docstrings across the board
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    # Disable line length check as it is handled by black
    # :TODO: Remove E501 when ruff supports all black rules
    "E501",
    # indentation contains tabs
    "W191",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    # Allow use of assert statements in tests
    "S101",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/docs/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.pytest.ini_options]
markers = ["utils: mark a test as a utils test"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(levelname)s - %(message)s"
